# xiaohaoo-yolo

.github/workflows/: build-debug.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/cpp/: CMakeLists.txt  yuv_preprocessing.cpp
app/src/main/java/com/xiaohaoo/yolo/camera/: Camera2Manager.kt
app/src/main/java/com/xiaohaoo/yolo/ui/activity/: MainActivity.kt  OverlayView.kt
app/src/main/java/com/xiaohaoo/yolo/util/: DetectorUtils.kt  YuvPreprocessor.kt
app/src/main/res/layout/: activity_main.xml
gradle/: libs.versions.toml
